--- a/app/AdminModule/templates/Default/default.latte
+++ b/app/AdminModule/templates/Default/default.latte
@@ -1,47 +1,36 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+{layout 'layout.latte'}
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+{block title}
+  Admin
+{/block}
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-    
-    <header>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-12">
-            <h1>Admin</h1>
-          </div>
-        </div>
-      </div>
-    </header>
-    
-    <main>
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-2">
-            left-bar
-          </div>
-          <div class="col-10">
-            content
-          </div>
-        </div>
-      </div>
-    </main>
+{block content}
+  <div class="row">
+    <div class="col-10 offset-1">
+      <table class="table">
+        <thead class="thead-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Name</th>
+            <th scope="col">Count</th>
+            <th scope="col">Producer</th>
+            <th scope="col">Price</th>
+            <th scope="col">Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">0</th>
+            <td>Paralen</td>
+            <td>4</td>
+            <td>Alza</td>
+            <td>20e</td>
+            <td>Headache drug</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
-    <footer>
 
-    </footer>
-  </body>
-  </html>
+{/block}
