--- a/app/AdminModule/templates/Product/default.latte
+++ b/app/AdminModule/templates/Product/default.latte
@@ -5,8 +5,7 @@
 {/block}
 
 {block content}
-    <div class="row">
-        <div class="col-10 offset-1">
+    <div class="col-10 offset-1">
         <table class="table table-bordered table-hover">
             <thead class="thead-dark">
             <tr>
@@ -29,6 +28,44 @@
             </tr>
             </tbody>
         </table>
-        </div>
     </div>
+    <div class="col-10 offset-1 d-flex justify-content-end">
+        <a href="#" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New Product</a>
+    </div>
+{*
+    <div class="col-10 offset-1">
+        Add new product:
+    </div>
+    <div class="col-10 offset-1">
+        <form>
+            <div class="form-row">
+                <div class="col form-group">
+                    <input type="text" class="form-control" placeholder="ID">
+                </div>
+                <div class="col form-group">
+                    <input type="text" class="form-control" placeholder="Name">
+                </div>
+                <div class="col form-group">
+                    <input type="text" class="form-control" placeholder="Count">
+                </div>
+                <div class="col form-group">
+                    <input type="text" class="form-control" placeholder="Producer">
+                </div>
+                <div class="col form-group">
+                    <input type="text" class="form-control" placeholder="Price">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col form-group">
+                    <input type="text" class="form-control" placeholder="Description">
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col form-group">
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </div>
+            </div>
+        </form>
+    </div>
+*}
 {/block}
