--- a/app/AdminModule/templates/User/default.latte
+++ b/app/AdminModule/templates/User/default.latte
@@ -6,38 +6,42 @@
 
 {block content}
     <div class="col-12">
-        <table class="table table-bordered table-hover">
-            <thead class="thead-dark">
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Name</th>
-                <th scope="col">Surename</th>
-                <th scope="col">Email</th>
-                <th scope="col">Password</th>
-                <th scope="col">Role</th>
-                <th scope="col">City</th>
-                <th scope="col">Address</th>
-                <th scope="col">ZIP</th>
-                <th scope="col">Country</th>
-                <th scope="col">Insurer ID</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr>
-                <th scope="row">0</th>
-                <td>Filip</td>
-                <td>Plesko</td>
-                <td>filip@gmail.com</td>
-                <td>12345</td>
-                <td>Admin</td>
-                <td>Martin</td>
-                <td>Tulska 9</td>
-                <td>03601</td>
-                <td>Slovakia</td>
-                <td>0</td>
-            </tr>
-            </tbody>
-        </table>
+            <table class="table table-bordered table-hover">
+                <thead class="thead-dark">
+                <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Surename</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Role</th>
+                    <th scope="col">City</th>
+                    <th scope="col">Address</th>
+                    <th scope="col">ZIP</th>
+                    <th scope="col">Country</th>
+                    <th scope="col">Insurer ID</th>
+                </tr>
+                </thead>
+                <tbody>
+                    {ifset $users}
+                        <tr n:foreach="$users as $sys_user">
+                            <th scope="row">{$sys_user->id}</th>
+                            <td>{$sys_user->name}</td>
+                            <td>{$sys_user->surname}</td>
+                            <td>{$sys_user->email}</td>
+                            <td>{$sys_user->role}</td>
+                            <td>{$sys_user->city}</td>
+                            <td>{$sys_user->address}</td>
+                            <td>{$sys_user->zip}</td>
+                            <td>{$sys_user->country}</td>
+                            <td>{$sys_user->insurer}</td>
+                        </tr>
+                    {else}
+                        <tr>
+                            <td>Users not found</td> {*TODO whole row*}
+                        </tr>
+                    {/ifset}
+                </tbody>
+            </table>
     </div>
     <div class="col-12 d-flex justify-content-end">
         <a href="#" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New user</a>
