--- a/app/AdminModule/templates/User/detail.latte
+++ b/app/AdminModule/templates/User/detail.latte
@@ -1,80 +1,92 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  User {php echo $id}
+  User {$id}
 {/block}
 
 {block content}
-  <div class="row">
-    <div class="col-12">
-      <h1>{php echo $id} User name, surename</h1>
-    </div>
-  </div>
+    {if $sys_user}
+          <div class="row">
+            <div class="col-12">
+              <h1>{$sys_user->name} {$sys_user->surname}</h1>
+            </div>
+          </div>
 
-  <div class="row">
-    <div class="col-md-6 col-sm-12">
-      User image/avatar
-    </div>
-    <div class="col-md-6 col-sm-12">
-      <div class="row">
-        <div class="col-11">
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">email:</span>
-                <span>
-                    email@gmail.com
-                </span>
+          <div class="row">
+            <div class="col-md-6 col-sm-12">
+              User image/avatar
             </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">Password:</span>
-                <span>
-                    12345
-                </span>
+            <div class="col-md-6 col-sm-12">
+              <div class="row">
+                <div class="col-11">
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">ID:</span>
+                        <span>
+                            {$sys_user->id}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">Email:</span>
+                        <span>
+                            {$sys_user->email}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">Role:</span>
+                        <span>
+                            {$sys_user->role}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">City:</span>
+                        <span>
+                            {$sys_user->city}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">Address:</span>
+                        <span>
+                            {$sys_user->address}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">ZIP:</span>
+                        <span>
+                            {$sys_user->zip}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">Country:</span>
+                        <span>
+                            {$sys_user->country}
+                        </span>
+                    </div>
+                    <div class="col-12 d-flex justify-content-between">
+                        <span class="h5">Insurer:</span>
+                        <span>
+                            {if $sys_user->insurer}
+                                {$sys_user->insurer}
+                            {else}
+                                Undefined
+                            {/if}
+                        </span>
+                    </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-md-4 offset-md-7 col-sm-5 offset-sm-6 d-flex justify-content-between">
+                <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
+                <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
+                </div>
+              </div>
             </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">Role:</span>
-                <span>
-                    admin/user
-                </span>
+          </div>
+        {else}
+            <div class="row">
+                <div class="col-12">
+                    <h1>User with id {$id} doesn't exist</h1>
+                </div>
             </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">City:</span>
-                <span>
-                    Martin
-                </span>
-            </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">Address:</span>
-                <span>
-                    Tulska 9
-                </span>
-            </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">ZIP:</span>
-                <span>
-                    03601
-                </span>
-            </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">Country:</span>
-                <span>
-                    Slovakia
-                </span>
-            </div>
-            <div class="col-12 d-flex justify-content-between">
-                <span class="h5">Insurer:</span>
-                <span>
-                    1
-                </span>
-            </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4 offset-md-7 col-sm-5 offset-sm-6 d-flex justify-content-between">
-        <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
-        <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Delete</a>        
-        </div>
-      </div>
-    </div>
-  </div>
+        {/if}
 
 {/block}
