--- a/app/AdminModule/templates/Parts/left-menu.latte
+++ b/app/AdminModule/templates/Parts/left-menu.latte
@@ -1,7 +1,8 @@
 <div class="row">
   <div class="col-12">
-    <div><a href="{$basePath}/admin">Admin</a></div>
     <div><a href="{$basePath}/admin/user">Users</a></div>
     <div><a href="{$basePath}/admin/product">Products</a></div>
+    <div><a href="{$basePath}/admin/order">Orders</a></div>
+    <div><a href="{$basePath}/admin/insurer">Insurers</a></div>
   </div>
 </div>
