--- a/app/AdminModule/templates/Product/default.latte
+++ b/app/AdminModule/templates/Product/default.latte
@@ -34,42 +34,6 @@
         </table>
     </div>
     <div class="col-10 offset-1 d-flex justify-content-end">
-        <a href="#" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New Product</a>
+        <a href="/admin/product/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New Product</a>
     </div>
-{*
-    <div class="col-10 offset-1">
-        Add new product:
-    </div>
-    <div class="col-10 offset-1">
-        <form>
-            <div class="form-row">
-                <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="ID">
-                </div>
-                <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Name">
-                </div>
-                <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Count">
-                </div>
-                <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Producer">
-                </div>
-                <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Price">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col form-group">
-                    <input type="text" class="form-control" placeholder="Description">
-                </div>
-            </div>
-            <div class="form-row">
-                <div class="col form-group">
-                    <button type="submit" class="btn btn-primary">Add</button>
-                </div>
-            </div>
-        </form>
-    </div>
-*}
 {/block}
