--- a/app/AdminModule/templates/User/default.latte
+++ b/app/AdminModule/templates/User/default.latte
@@ -44,6 +44,6 @@
             </table>
     </div>
     <div class="col-12 d-flex justify-content-end">
-        <a href="#" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New user</a>
+        <a href="/admin/user/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New user</a>
     </div>
 {/block}
