--- a/app/AdminModule/templates/Parts/footer.latte
+++ b/app/AdminModule/templates/Parts/footer.latte
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h3>Footer area</h3>
+        {*<h3>Footer area</h3>*}
       </div>
     </div>
   </div>
