--- a/app/AdminModule/templates/Product/add.latte
+++ b/app/AdminModule/templates/Product/add.latte
@@ -6,13 +6,13 @@
 
 {block content}
   <div class="col-10 offset-1">
-      <form>
+      {*<form>
           <div class="form-row">
               <div class="col form-group">
                   <input type="text" class="form-control" placeholder="Name">
               </div>
               <div class="col form-group">
-                  <input type="text" class="form-control" placeholder="Producer">   {*TODO zoznam*}
+                  <input type="text" class="form-control" placeholder="Producer">   *}{*TODO zoznam*}{*
               </div>
               <div class="col form-group">
                   <input type="text" class="form-control" placeholder="Price">
@@ -28,6 +28,7 @@
                   <button type="submit" class="btn btn-primary">Add</button>
               </div>
           </div>
-      </form>
+      </form>*}
+      {control addForm}
   </div>
 {/block}
