--- a/app/AdminModule/templates/User/default.latte
+++ b/app/AdminModule/templates/User/default.latte
@@ -8,18 +8,19 @@
     <div class="col-12">
             <table class="table table-bordered table-hover">
                 <thead class="thead-dark">
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Surename</th>
-                    <th scope="col">Email</th>
-                    <th scope="col">Role</th>
-                    <th scope="col">City</th>
-                    <th scope="col">Address</th>
-                    <th scope="col">ZIP</th>
-                    <th scope="col">Country</th>
-                    <th scope="col">Insurer ID</th>
-                </tr>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Surename</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Role</th>
+                        <th scope="col">City</th>
+                        <th scope="col">Address</th>
+                        <th scope="col">ZIP</th>
+                        <th scope="col">Country</th>
+                        <th scope="col">Insurer ID</th>
+                        <th scope="col"></th>
+                    </tr>
                 </thead>
                 <tbody>
                     {ifset $users}
@@ -34,6 +35,11 @@
                             <td>{$sys_user->zip}</td>
                             <td>{$sys_user->country}</td>
                             <td>{$sys_user->insurer}</td>
+                            <td style="text-align:center;">
+                                <a href="/admin/user/{$sys_user->id}"><i class="material-icons" style="color:blue;">description</i></a>
+                                <a href="/admin/user/{$sys_user->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
+                                <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+                            </td>
                         </tr>
                     {else}
                         <tr>
