DB-images/icons-tables

--- a/app/AdminModule/templates/Insurer/default.latte
+++ b/app/AdminModule/templates/Insurer/default.latte
@@ -11,6 +11,7 @@
             <tr>
                 <th scope="col">#</th>
                 <th scope="col">Name</th>
+                <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
@@ -18,6 +19,10 @@
                 <tr n:foreach="$insurers as $insurer">
                     <th scope="row">{$insurer->id}</th>
                     <td>{$insurer->name}</td>
+                    <td style="text-align:center;">
+                        <a href="/admin/insurer/{$insurer->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
+                        <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+                    </td>
                 </tr>
             {else}
                 <tr>
