--- a/app/AdminModule/templates/Product/default.latte
+++ b/app/AdminModule/templates/Product/default.latte
@@ -14,6 +14,7 @@
                 <th scope="col">Count</th>
                 <th scope="col">Producer</th>
                 <th scope="col">Price</th>
+                <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
@@ -24,6 +25,11 @@
                     <td>{$product->count}</td>
                     <td>{$product->producer}</td>
                     <td>{$product->price}</td>
+                    <td style="text-align:center;">
+                        <a href="/admin/product/{$product->id}"><i class="material-icons" style="color:blue;">description</i></a>
+                        <a href="/admin/product/{$product->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
+                        <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+                    </td>
                 </tr>
             {else}
                 <tr>
