--- a/app/AdminModule/templates/Insurer/edit.latte
+++ b/app/AdminModule/templates/Insurer/edit.latte
@@ -15,7 +15,7 @@
                     </div>
                     <div class="form-row">
                         <div class="col form-group">
-                            <button type="submit" class="btn btn-primary">Add</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
                         </div>
                     </div>
                 </form>
