--- a/app/AdminModule/templates/Order/default.latte
+++ b/app/AdminModule/templates/Order/default.latte
@@ -14,6 +14,7 @@
                 <th scope="col">City</th>
                 <th scope="col">Zip</th>
                 <th scope="col">Address</th>
+                <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
@@ -24,6 +25,11 @@
                     <td>{$order->city}</td>
                     <td>{$order->zip}</td>
                     <td>{$order->address}</td>
+                    <td style="text-align:center;">
+                        <a href="/admin/order/{$order->id}"><i class="material-icons" style="color:blue;">description</i></a>
+                        <a href="/admin/order/{$order->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
+                        <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
+                    </td>
                 </tr>
             {else}
                 <tr>
