--- a/app/AdminModule/templates/Order/detail.latte
+++ b/app/AdminModule/templates/Order/detail.latte
@@ -42,7 +42,7 @@
           </div>
           <div class="row">
             <div class="col-8 d-flex justify-content-between">
-            <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
+            <a href="/admin/order/{$order->id}/edit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
             <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
             </div>
           </div>
