--- a/app/AdminModule/templates/Order/edit.latte
+++ b/app/AdminModule/templates/Order/edit.latte
@@ -1,21 +1,30 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  insurer edit
+  order edit
 {/block}
 
 {block content}
-    {if $insurer}
+    {if $order}
         <div class="col-10 offset-1">
                 <form>
                     <div class="form-row">
                         <div class="col form-group">
-                            <input type="text" class="form-control" value="{$insurer->name}">
+                            <input type="text" class="form-control" value="{$order->status}">
+                        </div>
+                        <div class="col form-group">
+                            <input type="text" class="form-control" value="{$order->city}">
+                        </div>
+                        <div class="col form-group">
+                            <input type="text" class="form-control" value="{$order->zip}">
+                        </div>
+                        <div class="col form-group">
+                            <input type="text" class="form-control" value="{$order->address}">
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col form-group">
-                            <button type="submit" class="btn btn-primary">Add</button>
+                            <button type="submit" class="btn btn-primary">Save</button>
                         </div>
                     </div>
                 </form>
