--- a/app/AdminModule/templates/Product/detail.latte
+++ b/app/AdminModule/templates/Product/detail.latte
@@ -14,7 +14,7 @@
 
       <div class="row">
         <div class="col-md-6 col-sm-12">
-          IMAGE OF PRODUCT
+              <img src= "{$product->image}" alt="product image" class="img-thumbnail">
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="row">
@@ -39,7 +39,7 @@
           </div>
           <div class="row">
             <div class="col-3 offset-8 d-flex justify-content-between">
-            <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
+            <a href="/admin/product/{$product->id}/edit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
             <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
             </div>
           </div>
