--- a/app/AdminModule/templates/User/detail.latte
+++ b/app/AdminModule/templates/User/detail.latte
@@ -14,7 +14,7 @@
 
           <div class="row">
             <div class="col-md-6 col-sm-12">
-              User image/avatar
+              <img src= "{$sys_user->avatar}" alt="profile image" class="img-thumbnail">
             </div>
             <div class="col-md-6 col-sm-12">
               <div class="row">
@@ -75,7 +75,7 @@
               </div>
               <div class="row">
                 <div class="col-md-4 offset-md-7 col-sm-5 offset-sm-6 d-flex justify-content-between">
-                <a href="#" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
+                <a href="/admin/user/{$sys_user->id}/edit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
                 <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
                 </div>
               </div>
