--- a/app/AdminModule/templates/User/edit.latte
+++ b/app/AdminModule/templates/User/edit.latte
@@ -7,7 +7,7 @@
 {block content}
     {if $sys_user}
         <div class="col-10 offset-1">
-                <form>
+                {*<form>
                     <div class="form-row">
                         <div class="col form-group">
                             <input type="text" class="form-control" value="{$sys_user->name}">
@@ -16,7 +16,7 @@
                             <input type="text" class="form-control" value="{$sys_user->surname}">
                         </div>
                         <div class="col form-group">
-                            <input type="text" class="form-control" value="{$sys_user->email}"> {*TODO zoznam*}
+                            <input type="text" class="form-control" value="{$sys_user->email}"> *}{*TODO zoznam*}{*
                         </div>
                         <div class="col form-group">
                             <input type="text" class="form-control" value="{$sys_user->role}">
@@ -42,7 +42,8 @@
                             <button type="submit" class="btn btn-primary">Save</button>
                         </div>
                     </div>
-                </form>
+                </form>*}
+                {control editForm}
             </div>
     {else}
         Produkt neexistuje {*TODO pridat hlasku*}
