--- a/app/AdminModule/templates/Order/add.latte
+++ b/app/AdminModule/templates/Order/add.latte
@@ -5,14 +5,20 @@
 {/block}
 
 {block content}
+    {foreach $flashes as $flash}
+        <div class="alert alert-danger flash {$flash->type}" role="alert">
+            {$flash->message}
+        </div>
+    {/foreach}
+
   <div class="col-10 offset-1">
-      <form>
+      {*<form>
           <div class="form-row">
               <div class="col form-group">
                   <input type="text" class="form-control" placeholder="Name">
               </div>
               <div class="col form-group">
-                  <input type="text" class="form-control" placeholder="Producer">   {*TODO zoznam*}
+                  <input type="text" class="form-control" placeholder="Producer">   *}{*TODO zoznam*}{*
               </div>
               <div class="col form-group">
                   <input type="text" class="form-control" placeholder="Price">
@@ -28,6 +34,7 @@
                   <button type="submit" class="btn btn-primary">Add</button>
               </div>
           </div>
-      </form>
+      </form>*}
+      {control addForm}
   </div>
 {/block}
