--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -1,13 +1,13 @@
 <header>
   <div class="container-fluid">
       <div class="row">
-          <a href="/.."><i class="material-icons" style="color:black;">settings_system_daydream</i></a>
+          <a href="/admin"><i class="material-icons" style="color:black;">dehaze</i></a>
       </div>
   </div>
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <h1>Admin</h1>
+        <h1>Home</h1>
       </div>
     </div>
   </div>
