--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -6,8 +6,24 @@
   </div>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-12">
-        <h1>Home</h1>
+      <div class="col-4">
+        <h1>SpeciLogo</h1>
+      </div>
+      <div class="col-4 offset-4 d-flex justify-content-end">
+        <a href="{$basePath}/register">Register</a>
+        <a href="{$basePath}/login">Login</a>
+        <a href="/{$basePath}">Log Out</a>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-6 offset-2">
+        <ul class="d-flex list-unstyled">
+          <li class="pr-3"><a href="/{$basePath}">Home</a></li>
+          <li><a href="{$basePath}/products">products</a></li>
+        </ul>
+      </div>
+      <div class="col-4">
+        <a href="#"><i class="material-icons" style="color:black;">shopping_cart</i>cart</a>
       </div>
     </div>
   </div>
