timestamp-DB + flash->messages

--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -1,3 +1,9 @@
+{foreach $flashes as $flash}
+    <div class="alert alert-danger flash {$flash->type}" role="alert">
+        {$flash->message}
+    </div>
+{/foreach}
+
 <header>
   <div class="container-fluid">
       <div class="row">
