--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -9,7 +9,7 @@
     <div class="row d-flex justify-content-center">
       <div class="col-10 d-flex justify-content-start flex-wrap">
         <article class="col-lg-3 col-md-4 col-sm-6 col-xs-12 mb-4">
-            <a href="#">
+            <a href="#" class="text-dark" style="text-decoration:none;">
                 <div class="shadow p-2 bg-white rounded">
                     <div>
                         <img src= "/image/product/default.png" alt="product image" class="img-thumbnail">
