--- a/app/templates/Login/default.latte
+++ b/app/templates/Login/default.latte
@@ -1,10 +1,28 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+
+	<title>Login</title>
+</head>
+
+<body>
+
 {foreach $flashes as $flash}
     <div class="alert alert-danger flash {$flash->type}" role="alert">
         {$flash->message}
     </div>
 {/foreach}
-<div style="width:100%; height:100vh; position:relative;">
-<div style="width:300px; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%)">
-    {control loginForm}
-</div>
-</div>
+    <div style="width:100%; height:100vh; position:relative;">
+        <div style="width:300px; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%)">
+            {control loginForm}
+        </div>
+    </div>
+
+</body>
+</html>
