--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -31,7 +31,7 @@
 			<div class="col-6 offset-2">
 				<ul class="d-flex list-unstyled">
 					<li class="pr-3"><a href="/{$basePath}">Home</a></li>
-					<li><a href="{$basePath}/products">products</a></li>
+					<li><a href="{$basePath}/product">products</a></li>
 				</ul>
 			</div>
 			<div class="col-4">
