--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -31,11 +31,9 @@
 			<div class="col-6 offset-2">
 				<ul class="d-flex list-unstyled">
 					<li class="pr-3"><a href="/{$basePath}">Home</a></li>
-					<li><a href="{$basePath}/product">products</a></li>
+					<li class="pr-3"><a href="{$basePath}/product">products</a></li>
+					<li><a href="#" class="d-flex align-items-center" style="text-decoration:none;"><i class="material-icons" style="color:black;">shopping_cart</i><span>cart</span></a></li>
 				</ul>
-			</div>
-			<div class="col-4">
-				<a href="#" class="d-flex align-items-center"><i class="material-icons" style="color:black;">shopping_cart</i><span>buy</span></a>
 			</div>
 		</div>
 	</div>
