add drug to insurer/producer, create producer, show product in order

--- a/app/AdminModule/templates/Insurer/default.latte
+++ b/app/AdminModule/templates/Insurer/default.latte
@@ -20,6 +20,7 @@
                     <th scope="row">{$insurer->id}</th>
                     <td>{$insurer->name}</td>
                     <td style="text-align:center;">
+                        <a href="/admin/insurer/{$insurer->id}"><i class="material-icons" style="color:blue;">description</i></a>
                         <a href="/admin/insurer/{$insurer->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
                         <a href="#"><i class="material-icons" style="color:hsl(0, 100%, 30%);">delete</i></a>
                     </td>
