--- a/app/AdminModule/templates/Parts/left-menu.latte
+++ b/app/AdminModule/templates/Parts/left-menu.latte
@@ -4,5 +4,6 @@
     <div><a href="{$basePath}/admin/product">Products</a></div>
     <div><a href="{$basePath}/admin/order">Orders</a></div>
     <div><a href="{$basePath}/admin/insurer">Insurers</a></div>
+    <div><a href="{$basePath}/admin/producer">Producers</a></div>
   </div>
 </div>
