--- a/app/AdminModule/templates/Product/detail.latte
+++ b/app/AdminModule/templates/Product/detail.latte
@@ -15,6 +15,7 @@
       <div class="row">
         <div class="col-md-6 col-sm-12">
               <img src= "{$product->image}" alt="product image" class="img-thumbnail">
+              <a href="#" class="btn btn-primary btn-md active mt-2" role="button" aria-pressed="true">Add Image</a>
         </div>
         <div class="col-md-6 col-sm-12">
           <div class="row">
