--- a/app/templates/Settings/default.latte
+++ b/app/templates/Settings/default.latte
@@ -7,7 +7,7 @@
 {block content}
 	<div class="container">
 		<div class="row d-flex justify-content-center">
-			<div class="col-10 d-flex justify-content-center">
+			<div class="col-12 d-flex justify-content-start">
 				<span class="h4">MENO USERA</span>
 			</div>
 			<div class="col-6">
