--- a/app/templates/Product/detail.latte
+++ b/app/templates/Product/detail.latte
@@ -6,18 +6,18 @@
 
 {block content}
     {if $product}
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-12">
+                <div class="col-8 offset-2 pl-0 pr-0">
                 <h1>{$product->name}</h1>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-4 offset-md-2 col-sm-12 pl-0">
                     <img src= "{$product->image}" alt="product image" class="img-thumbnail">
                 </div>
-                <div class="col-md-6 col-sm-12">
+                <div class="col-md-4 col-sm-12 pr-0">
                 <div class="row">
                     <div class="col-12">
                     <h5>Description:</h5>
@@ -36,12 +36,6 @@
                     <p>
                         {$product->price}
                     </p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-3 offset-8 d-flex justify-content-between">
-                        <a href="/admin/product/{$product->id}/edit" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">Edit</a>
-                        <a href="#" class="btn btn-danger btn-sm active" role="button" aria-pressed="true">Delete</a>
                     </div>
                 </div>
                 <div class="row">
