--- a/app/templates/Product/detail.latte
+++ b/app/templates/Product/detail.latte
@@ -1,7 +1,7 @@
 {layout '../parts/@layout.latte'}
 
 {block title}
-  Product {$id}
+    {$product->name}
 {/block}
 
 {block content}
@@ -28,13 +28,13 @@
                     <div class="col-12">
                     <h5>Producer:</h5>
                     <p>
-                        {$product->producer}
+                        {$producer->name}
                     </p>
                     </div>
                     <div class="col-12">
                     <h5>Price:</h5>
                     <p>
-                        {$product->price}
+                        {$product->price} €
                     </p>
                     </div>
                 </div>
