--- a/app/templates/Settings/default.latte
+++ b/app/templates/Settings/default.latte
@@ -8,10 +8,10 @@
 	<div class="container">
 		<div class="row d-flex justify-content-center">
 			<div class="col-12 d-flex justify-content-start">
-				<span class="h4">MENO USERA</span>
+				<span class="h4">{$sys_user->name} {$sys_user->surname}</span>
 			</div>
 			<div class="col-6">
-            FOTO USERA				
+				<img src= "{$sys_user->avatar}" alt="profile image" class="img-thumbnail">
 			</div>
 			<div class="col-6">
                 {control setUser}				
