--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -19,12 +19,24 @@
 									<img src="{$product->image}" alt="product image" class="img-thumbnail">
 								</div class="col-12">
 
-								<div class="col-12 text-center mt-3 mb-3 name">
+								<div class="col-12 text-center mt-3 name">
 									<h3 class="h6">{$product->name}</h3>
 								</div>
 
 								<div class="col-12 text-center price">
 									{$product->price} €
+								</div>
+
+								<div class="col-12 text-center">
+									{if $product->count != 0}
+										<p style="font-size:0.7rem;">
+											<i><b>Skladom {$product->count} ks</b></i>
+										</p>
+									{else}
+										<p style="font-size:0.7rem;">
+											<i><b>Predpokladany cas dorucenia: XXX</b></i>
+										</p>
+									{/if}
 								</div>
 							</div>
 						</a>
