--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -14,6 +14,7 @@
 				<ul class="d-flex justify-content-center list-unstyled">
 					<li class="pr-3"><a href="/{$basePath}">Home</a></li>
 					<li class="pr-3"><a href="{$basePath}/product">products</a></li>
+					<li class="pr-3"><a href="{$basePath}/settings">Profil</a></li>
 				</ul>
 			</div>
 			<div class="col-2 d-flex justify-content-end pr-0">
