--- a/app/templates/Homepage/default.latte
+++ b/app/templates/Homepage/default.latte
@@ -8,7 +8,7 @@
 	<div class="container content">
 		<div class="row d-flex justify-content-center">
 			<div class="col-10 d-flex justify-content-center">
-				<span class="h4">Lastes products</span>
+				<span class="h4">Latest products</span>
 			</div>
 			<div class="col-10 d-flex justify-content-start flex-wrap product-wrap">
 				{foreach $products as $product}
