--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -1,5 +1,5 @@
 {foreach $flashes as $flash}
-    <div class="alert alert-danger flash {$flash->type}" role="alert">
+    <div class="alert alert-info flash {$flash->type}" role="alert">
         {$flash->message}
     </div>
 {/foreach}
@@ -13,7 +13,7 @@
 			<div class="col-4">
 				<ul class="d-flex justify-content-center list-unstyled">
 					<li class="pr-3"><a href="/{$basePath}">Home</a></li>
-					<li class="pr-3"><a href="{$basePath}/product">products</a></li>
+					<li class="pr-3"><a href="{$basePath}/product">Products</a></li>
 				</ul>
 			</div>
 			<div class="col-2 d-flex justify-content-end pr-0">
@@ -28,7 +28,7 @@
 				{/if}
 			</div>
 			<div class="col-10 d-flex justify-content-end pr-0">
-				<a href="#" class="d-flex align-items-center" style="text-decoration:none;"><i class="material-icons" style="color:#ba0909;">shopping_cart</i><span>cart</span></a>
+				<a href="/cart" class="d-flex align-items-center" style="text-decoration:none;"><i class="material-icons" style="color:#ba0909;">shopping_cart</i><span>cart</span></a>
 			</div>
 		</div>
 	</div>
