--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -13,7 +13,7 @@
 			<div class="col-4">
 				<ul class="d-flex justify-content-center list-unstyled">
 					<li class="pr-3"><a href="/{$basePath}">Home</a></li>
-					<li class="pr-3"><a href="{$basePath}/product">products</a></li>
+					<li class="pr-3"><a href="{$basePath}/product">Products</a></li>
 					<li class="pr-3"><a href="{$basePath}/settings">Profil</a></li>
 				</ul>
 			</div>
