--- a/app/templates/Product/detail.latte
+++ b/app/templates/Product/detail.latte
@@ -6,7 +6,7 @@
 
 {block content}
 	{if $product}
-		<div class="container-fluid">
+		<div class="container-fluid content">
 			<div class="row">
 				<div class="col-8 offset-2 pl-0 pr-0">
 					<h1>{$product->name}</h1>
