--- a/app/templates/Settings/default.latte
+++ b/app/templates/Settings/default.latte
@@ -5,7 +5,7 @@
 {/block}
 
 {block content}
-	<div class="container-fluid">
+	<div class="container-fluid content">
 		<div class="row d-flex justify-content-center">
 			<div class="col-10 offset-2 d-flex justify-content-start pl-0 pr-0">
 				<span class="h4">{$sys_user->name} {$sys_user->surname}</span>
