--- a/app/templates/Register/default.latte
+++ b/app/templates/Register/default.latte
@@ -5,7 +5,7 @@
 {/block}
 
 {block content}
-  <div class="container">
+  <div class="container content">
     <div class="row">
       <div class="col-4 offset-4">
         {control registerForm}
