--- a/app/templates/parts/header.latte
+++ b/app/templates/parts/header.latte
@@ -15,6 +15,7 @@
 					<li class="pr-3"><a href="/{$basePath}">Home</a></li>
 					<li class="pr-3"><a href="{$basePath}/product">Products</a></li>
 					<li class="pr-3"><a href="{$basePath}/settings">Profil</a></li>
+					<li class="pr-3"><a href="{$basePath}/order">Your orders</a></li>
 				</ul>
 			</div>
 			<div class="col-2 d-flex justify-content-end pr-0">
