--- a/app/templates/Order/default.latte
+++ b/app/templates/Order/default.latte
@@ -5,7 +5,7 @@
 {/block}
 
 {block content}
-	<div class="container">
+	<div class="container content">
 		<div class="row d-flex justify-content-center">
 			<div class="col-10 d-flex justify-content-center">
 				<span class="h4">Your orders</span>
