--- a/app/templates/Login/default.latte
+++ b/app/templates/Login/default.latte
@@ -21,7 +21,15 @@
     <div style="width:100%; height:100vh; position:relative;">
         <div style="width:300px; position:absolute; left:50%; top:50%; transform:translate(-50%,-50%)">
             {control loginForm}
+
+            <div>
+				<a href="{$basePath}/register" class="d-flex justify-content-center">Register Now</a>
+            </div>
+            <div>
+				<a href="/{$basePath}" class="d-flex justify-content-center">Home</a>
+            </div>
         </div>
+
     </div>
 
 </body>
