admin module edit

--- a/app/AdminModule/templates/Product/default.latte
+++ b/app/AdminModule/templates/Product/default.latte
@@ -24,7 +24,7 @@
                     <td>{$product->name}</td>
                     <td>{$product->count}</td>
                     <td>{$product->producer}</td>
-                    <td>{$product->price}</td>
+                    <td>{$product->price} €</td>
                     <td style="text-align:center;">
                         <a href="/admin/product/{$product->id}"><i class="material-icons" style="color:blue;">description</i></a>
                         <a href="/admin/product/{$product->id}/edit"><i class="material-icons" style="color:grey;">build</i></a>
