--- a/app/AdminModule/templates/Product/detail.latte
+++ b/app/AdminModule/templates/Product/detail.latte
@@ -28,13 +28,13 @@
             <div class="col-12">
               <h5>Producer:</h5>
               <p>
-                {$product->producer}
+                {$producer}
               </p>
             </div>
             <div class="col-12">
               <h5>Price:</h5>
               <p>
-                {$product->price}
+                {$product->price} €
               </p>
             </div>
           </div>
