--- a/app/AdminModule/templates/User/detail.latte
+++ b/app/AdminModule/templates/User/detail.latte
@@ -64,8 +64,8 @@
                     <div class="col-12 d-flex justify-content-between">
                         <span class="h5">Insurer:</span>
                         <span>
-                            {if $sys_user->insurer}
-                                {$sys_user->insurer}
+                            {if $insurer}
+                                {$insurer}
                             {else}
                                 Undefined
                             {/if}
