--- a/app/templates/Settings/default.latte
+++ b/app/templates/Settings/default.latte
@@ -11,7 +11,7 @@
 				<span class="h4">{$sys_user->name} {$sys_user->surname}</span>
 			</div>
 			<div class="col-4 pl-0">
-				<img src= "{$sys_user->avatar}" alt="profile image" class="img-thumbnail">
+				<img src= "{$sys_user->avatar}" alt="profile image" class="img-thumbnail" width="300">
 			</div>
 			<div class="col-4 pr-0">
                 {control setUser}				
