--- a/app/templates/Product/detail.latte
+++ b/app/templates/Product/detail.latte
@@ -15,7 +15,7 @@
 
 			<div class="row">
 				<div class="col-md-4 offset-md-2 col-sm-12 pl-0">
-					<img src="{$product->image}" alt="product image" class="img-thumbnail">
+					<img src="{$product->image}" alt="product image" class="img-thumbnail" width="300">
 				</div>
 				<div class="col-md-4 col-sm-12 pr-0">
 					<div class="row">
