--- a/app/AdminModule/templates/Order/default.latte
+++ b/app/AdminModule/templates/Order/default.latte
@@ -39,7 +39,7 @@
             </tbody>
         </table>
     </div>
-    <div class="col-10 offset-1 d-flex justify-content-end">
+    {*<div class="col-10 offset-1 d-flex justify-content-end">
         <a href="/admin/order/add" class="btn btn-primary btn-md active" role="button" aria-pressed="true">New order</a>
-    </div>
+    </div>*}
 {/block}
