--- a/app/AdminModule/templates/Product/default.latte
+++ b/app/AdminModule/templates/Product/default.latte
@@ -23,7 +23,7 @@
                     <th scope="row">{$product->id}</th>
                     <td>{$product->name}</td>
                     <td>{$product->count}</td>
-                    <td>{$product->producer}</td>
+                    <td>{$producers->getByID($product->producer)->name}</td>
                     <td>{$product->price} €</td>
                     <td style="text-align:center;">
                         <a href="/admin/product/{$product->id}"><i class="material-icons" style="color:blue;">description</i></a>
