--- a/app/AdminModule/templates/User/default.latte
+++ b/app/AdminModule/templates/User/default.latte
@@ -31,7 +31,7 @@
                             <td>{$sys_user->role}</td>
                             <td>{$sys_user->city}</td>
                             <td>{$sys_user->address}</td>
-                            <td>{$sys_user->zip}</td>
+                            <td>{str_pad($sys_user->zip, 5, "0", STR_PAD_LEFT)}</td>
                             <td>{$sys_user->country}</td>
                             <td style="text-align:center;">
                                 <a href="/admin/user/{$sys_user->id}"><i class="material-icons" style="color:blue;">description</i></a>
