admin module edit

--- a/app/AdminModule/templates/User/detail.latte
+++ b/app/AdminModule/templates/User/detail.latte
@@ -65,7 +65,7 @@
                         <span class="h5">Insurer:</span>
                         <span>
                             {if $insurer}
-                                {$insurer}
+                                {$insurer->name}
                             {else}
                                 Undefined
                             {/if}
