--- a/app/AdminModule/templates/Order/detail.latte
+++ b/app/AdminModule/templates/Order/detail.latte
@@ -16,6 +16,12 @@
 			<div class="col-md-6 col-sm-12">
 				<div class="row">
 					<div class="col-8 d-flex justify-content-between">
+						<h5>User:</h5>
+						<p>
+							{$sys_user->name} {$sys_user->surname}
+						</p>
+					</div>
+					<div class="col-8 d-flex justify-content-between">
 						<h5>Status:</h5>
 						<p>
 							{$order->status}
