Insurer/Producer edit forms

--- a/app/AdminModule/templates/Producer/edit.latte
+++ b/app/AdminModule/templates/Producer/edit.latte
@@ -1,13 +1,13 @@
 {layout '../Parts/layout.latte'}
 
 {block title}
-  insurer edit
+  producer edit
 {/block}
 
 {block content}
-    {if $insurer}
+    {if $producer}
         <div class="col-10 offset-1">
-                {control editForm}
+        {control editForm}
         </div>
     {else}
         Produkt neexistuje {*TODO pridat hlasku*}
